--- a/public/mutfak.html
+++ b/public/mutfak.html
@@ -20,16 +20,20 @@
             <div class="kitchen-layout">
                 <!-- Sol Panel - Aktif Siparişler -->
                 <div class="left-panel">
-                    <div class="section">
-                        <h3><i class="fas fa-clock"></i> Bekleyen Siparişler</h3>
-                        <div class="order-filters">
-                            <button class="filter-btn active" data-status="mutfakta">Mutfakta</button>
-                            <button class="filter-btn" data-status="hazirlaniyor">Hazırlanıyor</button>
-                            <button class="filter-btn" data-status="hazir">Hazır</button>
-                        </div>
-                        
-                        <div class="active-orders" id="activeOrders">
-                            <!-- Aktif siparişler dinamik olarak yüklenecek -->
+                    <div class="section kitchen-columns">
+                        <div style="display:flex; gap:10px;">
+                            <div style="flex:1">
+                                <h4>Mutfakta</h4>
+                                <div class="active-orders" id="mutfaktaOrders"></div>
+                            </div>
+                            <div style="flex:1">
+                                <h4>Hazırlanıyor</h4>
+                                <div class="active-orders" id="hazirlaniyorOrders"></div>
+                            </div>
+                            <div style="flex:1">
+                                <h4>Hazır</h4>
+                                <div class="active-orders" id="hazirOrders"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -95,9 +99,63 @@
         </div>
     </div>
 
+    <!-- FAB: Ürün Ekle Butonu -->
+    <button id="addProductFab" class="fab-add-product" title="Yeni Ürün Ekle">
+        <i class="fas fa-plus"></i> Ürün Ekle
+    </button>
+    <!-- Ürün Ekle Modalı -->
+    <div class="modal" id="addProductModal" style="display:none;">
+        <div class="modal-content" style="max-width:400px; margin:auto;">
+            <div class="modal-header" style="text-align:center;">
+                <h3><i class="fas fa-utensils"></i> Yeni Ürün Ekle</h3>
+            </div>
+            <div class="modal-body">
+                <form id="productAddForm" autocomplete="off">
+                    <label>Ürün Adı*</label>
+                    <input type="text" id="yeniProductName" class="input-lg" placeholder="Örn: Lahmacun" required>
+                    <label>Fiyat*
+                        <input type="number" step="0.01" id="yeniProductPrice" class="input-lg" placeholder="Örn: 39.90" required>
+                    </label>
+                    <label>Kategori*</label>
+                    <select id="yeniProductCategory" class="input-lg">
+                        <option value="yemek">Yemek</option>
+                        <option value="icecek">İçecek</option>
+                    </select>
+                    <label>Stok (isteğe bağlı)</label>
+                    <input type="number" id="yeniProductStock" class="input-lg" placeholder="Varsayılan: 100">
+                    <label>Açıklama (isteğe bağlı)</label>
+                    <textarea id="yeniProductDesc" class="input-lg" rows="2" placeholder="Kısa açıklama"></textarea>
+                </form>
+                <div id="addProductWarning" style="color:#b91c1c; font-weight:bold; margin:4px 0 0 0;"></div>
+            </div>
+            <div class="modal-footer" style="display:flex;gap:8px;justify-content:center;">
+                <button class="btn btn-primary" id="addProductSaveBtn">Kaydet</button>
+                <button class="btn btn-secondary" id="addProductCancelBtn">İptal</button>
+            </div>
+        </div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="mutfak.js"></script>
 </body>
 </html>
+
+<style>
+.fab-add-product {
+  position: fixed;
+  right: 24px; bottom: 24px; z-index: 1011;
+  background: #3182ce; color: #fff; border: none; border-radius:50px;
+  padding: 16px 28px; font-size: 1.3rem; box-shadow:0 6px 16px rgba(0,0,0,0.20);
+  display: flex; gap: 8px; align-items: center; cursor:pointer; transition:.2s;
+}
+.fab-add-product:hover { background: #2563eb; }
+@media (min-width:600px) {
+  .fab-add-product { right:42px; bottom:38px; }
+}
+@media (max-width:600px) {
+  .fab-add-product { width:90vw; left:5vw; right:auto; bottom:16px; font-size:1.15rem; justify-content:center; }
+}
+.input-lg { width:100%;padding:9px 10px;margin:7px 0 14px 0;font-size:1.09rem;border:1px solid #e2e8f0;border-radius:7px;}
+</style>
 
 
