--- a/public/raporlar.html
+++ b/public/raporlar.html
@@ -52,9 +52,10 @@
                         <option value="revenue">Gelir Raporu</option>
                         <option value="products">Ürün Analizi</option>
                         <option value="tables">Masa Analizi</option>
+                        <option value="all">Tüm Raporlar</option>
                     </select>
                 </div>
-                <button class="btn btn-primary" onclick="generateReport()">
+                <button class="btn btn-primary btn-large" onclick="generateReport()">
                     <i class="fas fa-sync-alt"></i> Rapor Oluştur
                 </button>
             </div>
@@ -99,58 +100,74 @@
                  </div>
              </div>
          </div>
-
-        <!-- Grafik -->
-        <div class="section">
-            <h3><i class="fas fa-chart-bar"></i> Satış Grafiği</h3>
-            <div class="chart-container">
-                <canvas id="salesChart"></canvas>
-            </div>
+        <!-- Temizlik Butonu Bölümü -->
+        <div style="text-align:right; margin: 20px 0;">
+            <button id="clearDataBtn" class="btn btn-danger">
+                <i class="fas fa-broom"></i> Verileri Temizle
+            </button>
         </div>
-
-                 <!-- Detaylı Tablo -->
-         <div class="section">
-             <h3><i class="fas fa-table"></i> Detaylı Satış Raporu</h3>
-             <div class="table-container">
-                 <table class="data-table">
-                     <thead>
-                         <tr>
-                             <th>Masa</th>
-                             <th>Ürün Sayısı</th>
-                             <th>Toplam</th>
-                             <th>Tarih</th>
-                             <th>Durum</th>
-                         </tr>
-                     </thead>
-                     <tbody id="salesTableBody">
-                         <!-- Veriler JavaScript ile doldurulacak -->
-                     </tbody>
-                 </table>
-             </div>
-         </div>
-
-                 <!-- Ürün Analizi -->
-         <div class="section">
-             <h3><i class="fas fa-chart-pie"></i> En Çok Satan Ürünler</h3>
-             <div class="product-analysis">
-                 <div class="chart-container">
-                     <canvas id="topProductsChart"></canvas>
-                 </div>
-                 <div class="product-list" id="topProductsList">
-                     <!-- En çok satan ürünler listesi -->
-                 </div>
-             </div>
-         </div>
-
-        <!-- Masa Analizi -->
-        <div class="section">
-            <h3><i class="fas fa-chair"></i> Masa Performansı</h3>
-            <div class="table-performance">
-                <div id="tablePerformance">
-                    <!-- Masa performans kartları -->
+        <!-- Temizlik Modalı / Popup -->
+        <div class="modal" id="clearDataModal" style="display:none;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>Verileri Temizle</h3>
+                </div>
+                <div class="modal-body">
+                    <p><b>Dikkat!</b> Bu işlemin geri dönüşü yoktur. Temizlenecek verileri seçin.</p>
+                    <form id="clearSelections">
+                        <label><input type="checkbox" id="clearOrders" checked> Tüm Siparişler</label><br>
+                        <label><input type="checkbox" id="clearRevenue"> Gelir & Ciro (Sadece raporlama eklentisi tuttuysa)</label><br>
+                        <label><input type="checkbox" id="clearProductStats"> Ürün Satış İstatistikleri</label><br>
+                        <label><input type="checkbox" id="clearMenu"> Tüm Ürünleri Sil (Menüyü Sıfırla)</label><br>
+                        <span style="font-size:0.9em;color:#444;">Tüm yemek ve içecek ürünlerini sıfırlar.</span>
+                    </form>
+                    <div style="margin-top:16px; padding:10px; border-radius:8px; background:#fff3cd; color:#856404; border:1px solid #ffeeba; text-align:center; font-weight:600;">
+                        <i class="fas fa-exclamation-triangle"></i> Emin misiniz? Bu veriler geri getirilemez!
+                    </div>
+                    <div id="clearMsg" style="margin-top:10px; text-align:center; font-weight:bold;"></div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-danger" id="confirmClearData" disabled>Onayla ve Temizle</button>
+                    <button class="btn btn-secondary" id="cancelClearData">İptal</button>
                 </div>
             </div>
         </div>
+
+        <!-- Grafik -->
+        <div class="report-sales">
+            <div class="section">
+                <h3><i class="fas fa-chart-bar"></i> Satış Grafiği</h3>
+                <div class="chart-container">
+                    <canvas id="salesChart"></canvas>
+                </div>
+            </div>
+        </div>
+        <div class="report-revenue">
+            <div class="summary-cards" id="summary-cards">
+                <!-- ... gelir kartları ... -->
+            </div>
+        </div>
+        <!-- Ürün Analizi -->
+        <div class="report-products">
+            <div class="section">
+                <h3><i class="fas fa-chart-pie"></i> En Çok Satan Ürünler</h3>
+                <div class="product-analysis">
+                    <div class="chart-container">
+                        <canvas id="topProductsChart"></canvas>
+                    </div>
+                    <div class="product-list" id="topProductsList"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Masa Analizi -->
+        <div class="report-tables">
+            <div class="section">
+                <h3><i class="fas fa-chair"></i> Masa Performansı</h3>
+                <div class="table-performance" id="tablePerformance"></div>
+            </div>
+        </div>
+        <!-- Tüm Raporlar (optionally wrapper) -->
+        <div class="report-all" style="display:none;"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
